# tson

./: .gitignore  CONTRIBUTING.md  Cargo.toml  DOC.md  Guidelines-future.md  LICENSE  Makefile  README.md  REAL-LIFE.md  TSON-FORMAT.md  build.rs  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: ci.yml  release.yml
benches/: core.rs
docs/: DOC.md  TSON-FORMAT.md  js.md  python.md
examples/: config.json  file.json  iot-t2.json  sample-json-25kb.json  telemetry.json  users-t1.json  users-t1.tson
js/: README.md  index.d.ts  index.js  package.json  test.js
js/npm/darwin-arm64/: README.md  package.json
js/npm/darwin-x64/: README.md  package.json
js/npm/linux-arm64-gnu/: README.md  package.json
js/npm/linux-x64-gnu/: README.md  package.json
js/npm/win32-x64-msvc/: README.md  package.json
python/: README.md
python/tests/: test_basic.py
scripts/: bump-version.sh
src/: compile.rs  decode.rs  decompile.rs  encode.rs  error.rs  lib.rs  main.rs  nodejs.rs  prelude.rs  python.rs  stream.rs  structure.rs  tson.rs
tests/: roundtrip.rs
