[package]
name = "tson"
version = "0.1.0"
edition = "2021"
description = "Terse JSON - a compact binary JSON format for microcontrollers and constrained environments"
default-run = "tson-cli"

[lib]
name = "tson"
path = "src/lib.rs"
crate-type = ["lib", "cdylib"]

[[bin]]
name = "tson-cli"
path = "src/main.rs"
required-features = ["std", "json"]
[[bin]]
name = "tson-bench"
path = "src/bin/bench.rs"
required-features = ["std", "json"]
[[bin]]
name = "gen-examples"
path = "src/bin/gen_examples.rs"
required-features = ["std", "json"]
[[bin]]
name = "comp-bench"
path = "src/bin/comp_bench.rs"
required-features = ["std", "json"]

[features]
default = ["std", "json", "dict"]
std = []
json = ["serde", "serde_json"]
dict = []
python = ["pyo3", "json"]
nodejs = ["napi", "napi-derive", "json"]

[dependencies]
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }
pyo3 = { version = "0.23", features = ["extension-module"], optional = true }
napi = { version = "2", features = ["napi8", "serde-json"], optional = true }
napi-derive = { version = "2", optional = true }

[dev-dependencies]
serde_json = "1.0"
criterion = "0.5"

[[bench]]
name = "core"
harness = false
required-features = ["std", "json"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
