[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
# Distribution name on PyPI (`tson` is taken). The importable module is still
# `tson` — see `module-name` under [tool.maturin].
name = "tson-bin"
version = "0.1.0"
description = "Terse JSON — compact binary JSON for microcontrollers"
readme = "python/README.md"
license = { text = "MIT" }
requires-python = ">=3.8"
authors = [{ name = "SIKTEC Lab", email = "siktec.lab@gmail.com" }]
keywords = ["json", "binary", "serialization", "embedded", "iot"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Rust",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries",
]

[project.urls]
Homepage = "https://github.com/siktec-lab/tson"
Repository = "https://github.com/siktec-lab/tson"
Issues = "https://github.com/siktec-lab/tson/issues"

[tool.maturin]
bindings = "pyo3"
features = ["python"]
# Keep `import tson` working even though the PyPI distribution is `tson-bin`.
module-name = "tson"
